[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosilico-validators"
version = "0.1.0"
description = "Multi-system tax/benefit validation for Cosilico DSL encodings"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cosilico", email = "hello@cosilico.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.28",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
policyengine = [
    "policyengine-us>=1.45",
    "policyengine-core>=3.20",
]
taxsim = [
    # TAXSIM accessed via web API (default) or local executable
    # Web API requires no additional dependencies
    # Local executable requires download from https://taxsim.nber.org/taxsim35/
]
yale = [
    # Yale Tax-Simulator is R-based, requires:
    # - R 4.0+ installed
    # - Tax-Simulator repo cloned from https://github.com/Budget-Lab-Yale/Tax-Simulator
    # - R packages: tidyverse, yaml, data.table
]
psl = [
    "taxcalc>=4.0",
    "behresp>=0.10",  # Required by taxcalc for behavioral response estimation
]
all = [
    "cosilico-validators[policyengine,psl]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "towncrier>=23.0",
]

[project.scripts]
cosilico-validators = "cosilico_validators.cli:cli"

[project.urls]
Homepage = "https://github.com/CosilicoAI/cosilico-validators"
"Bug Tracker" = "https://github.com/CosilicoAI/cosilico-validators/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cosilico_validators"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM"]
ignore = ["E501", "B905", "SIM115"]  # Allow long lines, zip without strict, tempfile pattern

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as requiring network access (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow-running (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/cosilico_validators"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.towncrier]
package = "cosilico_validators"
package_dir = "src"
directory = "changes"
filename = "CHANGELOG.md"
title_format = "{name} {version} ({project_date})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true
